--- a/backend/package.json
+++ b/backend/package.json
@@ -29,5 +29,8 @@
     "@faker-js/faker": "^10.1.0",
     "nodemon": "^3.1.11",
     "prisma": "^5.22.0"
+  },
+  "prisma": {
+    "seed": "node prisma/seed.js"
   }
 }
