--- a/frontend/medi-connect/package.json
+++ b/frontend/medi-connect/package.json
@@ -22,14 +22,17 @@
     "@radix-ui/themes": "^3.2.1",
     "@tailwindcss/vite": "^4.1.16",
     "@tanstack/react-query": "^5.90.17",
+    "@types/lodash": "^4.17.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "lodash": "^4.17.23",
     "lucide-react": "^0.548.0",
     "qrcode.react": "^4.2.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-hot-toast": "^2.6.0",
     "react-router-dom": "^7.9.4",
+    "recharts": "^3.7.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
